<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LayoutMainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="112dp"
        android:layout_height="66dp"
        android:layout_marginTop="172dp"
        android:layout_weight="1"
        android:contentDescription="@string/TOAST"
        android:text="@string/toast"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="112dp"
        android:layout_height="67dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/URL"
        android:text="@string/url"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="114dp"
        android:layout_height="66dp"
        android:layout_marginEnd="76dp"
        android:layout_weight="1"
        android:contentDescription="@string/Calcu"
        android:text="@string/calcu"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="114dp"
        android:layout_height="65dp"
        android:layout_marginEnd="76dp"
        android:layout_weight="1"
        android:contentDescription="@string/Promedio"
        android:text="@string/promedio"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>