<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Resultado">

    <TextView
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:text="@string/_0"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="190dp">

        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="83dp" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="83dp" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rseta"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="190dp" />
    </LinearLayout>
</LinearLayout>